Enhance image upload interface; update styles for better layout and visibility; fix navigation links for consistency

--- a/css-folder/cleaning.css
+++ b/css-folder/cleaning.css
@@ -11,7 +11,7 @@
 }
  .container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 0;
     background: transparent;
     padding: 20px;
     border-radius: 8px;
@@ -20,6 +20,9 @@
     text-align: center;
     border: 1px solid #ccc;
     backdrop-filter: blur(6px);
+  }
+  .upload h2{
+    color:white;
   }
   input[type="file"] {
     margin: 20px 0;
@@ -32,16 +35,23 @@
 
   }
   .preview {
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction:column;
+    margin-left:50px;
+    width:400px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border: 1px solid #ccc;
+    backdrop-filter: blur(6px);
+    background: transparent;
+    border-radius: 8px;
+    height:440px;
   }
     .preview img {
-        width: auto;
-        height:200px;
-        margin-right: 20px;
-        max-width: 400px;
+        width: 300px;
+        height:300px;
+        margin-top:20px;
+        margin-bottom: 10px;;
     }
   button {
     background: #CFFFB0;
@@ -50,6 +60,8 @@
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
   button:hover {
     background: #9ee370;
@@ -91,9 +103,14 @@
     cursor: pointer;
 }
 #status{
-    margin-top: 20px;color: #000000;
+    margin-top: 20px;color: #fffcfc;
 }
+.location-container h2{
+    color:white;
+    margin-bottom: 20px;
+    margin-top:10px;
 
+}
 
 
 
